# TFG

./: .gitignore  .gitmodules  README.md
project_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project_ws/install/bonxai_ros/lib/bonxai_ros/: bonxai_server_node
project_ws/install/bonxai_ros/share/ament_index/resource_index/package_run_dependencies/: bonxai_ros
project_ws/install/bonxai_ros/share/bonxai_ros/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
project_ws/install/bonxai_wrapper/include/: bonxai_server.hpp
project_ws/install/bonxai_wrapper/share/ament_index/resource_index/parent_prefix_path/: bonxai_wrapper
project_ws/install/bonxai_wrapper/share/bonxai_wrapper/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
project_ws/install/bonxai_wrapper/share/bonxai_wrapper/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  bonxai_serverConfig.cmake  bonxai_serverExport.cmake
project_ws/install/location_controller/lib/location_controller/: input_data_node  location_node  location_node_err  location_node_no_err  noisy_cloud_node
project_ws/install/location_controller/share/location_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
project_ws/install/mapping_controller/lib/mapping_controller/: mapping_node
project_ws/install/mapping_controller/share/ament_index/resource_index/parent_prefix_path/: mapping_controller
project_ws/install/mapping_controller/share/mapping_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
project_ws/install/mapping_controller/share/mapping_controller/cmake/: mapping_controllerConfig.cmake
project_ws/log/: latest_build
project_ws/src/bonxai_wrapper/: CMakeLists.txt  package.xml
project_ws/src/config/: general_config.yaml  general_config_clean.yaml  general_config_noisy.yaml
project_ws/src/documentation/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib
project_ws/src/location_controller/: package.xml  setup.cfg  setup.py
project_ws/src/location_controller/location_controller/: aux_func_temp.py  input_data_module.py  key_frame_selector.py  location_module.py  location_node.py  location_node_err.py  location_node_no_err.py  noisy_cloud_module.py  utils.py
project_ws/src/mapping_controller/: CMakeLists.txt  setup.cfg  setup.py
project_ws/src/mapping_controller/src/: mapping_node.cpp
project_ws/src/metrics/: localization_metrics.ipynb  localization_metrics_new.ipynb  map_metrics.ipynb  mapping_metrics_new.ipynb
project_ws/src/recordings/: calculated_pose.txt  error_rmse.txt  original_pose.txt
